--- a/app/src/main/res/layout/sign_in.xml
+++ b/app/src/main/res/layout/sign_in.xml
@@ -39,7 +39,7 @@
         android:layout_marginStart="80dp"
         android:layout_marginTop="4dp"
         android:ems="10"
-        android:fontFamily="@font/inter"
+        android:fontFamily="@font/abeezee"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
