--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -47,7 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
         android:layout_marginTop="24dp"
-        android:fontFamily="@font/inter"
+        android:fontFamily="@font/abeezee"
         android:text="Organizational Role"
         android:textColor="#3F51B5"
         android:textSize="13sp"
@@ -74,7 +74,7 @@
         android:layout_height="18dp"
         android:layout_marginStart="80dp"
         android:layout_marginTop="24dp"
-        android:fontFamily="@font/inter"
+        android:fontFamily="@font/abeezee"
         android:text="Email"
         android:textColor="#3F51B5"
         android:textSize="13sp"
@@ -100,7 +100,7 @@
         android:layout_height="18dp"
         android:layout_marginStart="80dp"
         android:layout_marginTop="24dp"
-        android:fontFamily="@font/inter"
+        android:fontFamily="@font/abeezee"
         android:text="Password"
         android:textColor="#3F51B5"
         android:textSize="13sp"
