--- a/app/src/main/res/layout/travel_itinerary.xml
+++ b/app/src/main/res/layout/travel_itinerary.xml
@@ -28,6 +28,7 @@
         android:text="First Name"
         android:textColor="#3F51B5"
         android:textSize="14sp"
+        android:textStyle="italic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/travelItin" />
 
@@ -41,6 +42,7 @@
         app:layout_constraintTop_toBottomOf="@+id/firstName">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextFirstName"
             android:layout_width="250dp"
             android:layout_height="35dp"
             android:fontFamily="@font/abeezee"
@@ -55,6 +57,7 @@
         android:layout_marginTop="10dp"
         android:text="Last Name"
         android:textColor="#3F51B5"
+        android:textStyle="italic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
 
@@ -68,6 +71,7 @@
         app:layout_constraintTop_toBottomOf="@+id/lastName">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextLastName"
             android:layout_width="250dp"
             android:layout_height="35dp" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -81,6 +85,7 @@
         android:fontFamily="@font/abeezee"
         android:text="Email"
         android:textColor="#3F51B5"
+        android:textStyle="italic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
 
@@ -106,6 +111,7 @@
         android:fontFamily="@font/abeezee"
         android:text="Dates of Travel "
         android:textColor="#3F51B5"
+        android:textStyle="italic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
 
@@ -142,6 +148,7 @@
         android:fontFamily="@font/abeezee"
         android:text="Travel Destination"
         android:textColor="#3F51B5"
+        android:textStyle="italic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextDate" />
 
@@ -163,6 +170,7 @@
         android:fontFamily="@font/abeezee"
         android:text="Traveling With Others?"
         android:textColor="#3F51B5"
+        android:textStyle="italic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
@@ -194,6 +202,7 @@
         android:fontFamily="@font/abeezee"
         android:text="Travel Group"
         android:textColor="#3F51B5"
+        android:textStyle="italic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
@@ -215,6 +224,7 @@
         android:fontFamily="@font/abeezee"
         android:text="Itinerary"
         android:textColor="#3F51B5"
+        android:textStyle="italic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/no" />
 
