--- a/app/src/main/res/layout/meal_results.xml
+++ b/app/src/main/res/layout/meal_results.xml
@@ -23,18 +23,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:fontFamily="@font/abeezee"
         android:text="Breakfast"
         android:textColor="#3F51B5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView15" />
+        app:layout_constraintTop_toBottomOf="@+id/textView31" />
 
     <TableLayout
-        android:layout_width="300dp"
-        android:layout_height="150dp"
+        android:id="@+id/tableLayout"
+        android:layout_width="360dp"
+        android:layout_height="50dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="4dp"
+        android:background="#523F51B5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView17">
 
@@ -46,9 +48,11 @@
                 android:id="@+id/textView21"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="8sp"
                 android:layout_marginRight="5sp"
                 android:fontFamily="@font/abeezee"
-                android:text="Day 1" />
+                android:text="Day 1"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/textView19"
@@ -56,7 +60,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5sp"
                 android:fontFamily="@font/abeezee"
-                android:text="Day 2" />
+                android:text="Day 2"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/textView22"
@@ -64,7 +69,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5sp"
                 android:fontFamily="@font/abeezee"
-                android:text="Day 3" />
+                android:text="Day 3"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/textView23"
@@ -72,7 +78,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5sp"
                 android:fontFamily="@font/abeezee"
-                android:text="Day 4" />
+                android:text="Day 4"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/textView24"
@@ -80,7 +87,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5sp"
                 android:fontFamily="@font/abeezee"
-                android:text="Day 5" />
+                android:text="Day 5"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/textView25"
@@ -88,33 +96,96 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5sp"
                 android:fontFamily="@font/abeezee"
-                android:text="Day 6" />
+                android:text="Day 6"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/textView26"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Day 7" />
+                android:text="Day 7"
+                android:textSize="16sp" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/textView27"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="30" />
+                android:layout_marginLeft="8sp"
+                android:layout_marginRight="5sp"
+                android:text="30"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/textView16"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="18"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/textView18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="15"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/textView20"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="20"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/textView28"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="15"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/textView29"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="12"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/textView30"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="15"
+                android:textSize="16sp" />
         </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
     </TableLayout>
+
+    <TextView
+        android:id="@+id/textView31"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/abeezee"
+        android:text="Week of: "
+        android:textColor="#3F51B5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView15" />
+
+    <TextView
+        android:id="@+id/textView32"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/abeezee"
+        android:text="Lunch"
+        android:textColor="#3F51B5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
