--- a/app/src/main/res/layout/meal_planning.xml
+++ b/app/src/main/res/layout/meal_planning.xml
@@ -113,7 +113,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />
 
     <Button
-        android:id="@+id/csButton"
+        android:id="@+id/cs"
         android:layout_width="80dp"
         android:layout_height="40dp"
         android:layout_marginStart="24dp"
@@ -137,7 +137,7 @@
         android:fontFamily="@font/abeezee"
         android:text="PGS"
         android:textColor="#3F51B5"
-        app:layout_constraintStart_toEndOf="@+id/csButton"
+        app:layout_constraintStart_toEndOf="@+id/cs"
         app:layout_constraintTop_toBottomOf="@+id/textView9"
         app:strokeColor="#3F51B5"
         app:strokeWidth="1dp" />
@@ -183,7 +183,7 @@
         android:text="What days will you require meals?"
         android:textColor="#3F51B5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/csButton" />
+        app:layout_constraintTop_toBottomOf="@+id/cs" />
 
     <EditText
         android:id="@+id/editTextDate2"
