--- a/app/src/main/res/layout/meal_planning.xml
+++ b/app/src/main/res/layout/meal_planning.xml
@@ -43,6 +43,7 @@
             android:id="@+id/editTextFirstName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="#000000"
             android:textSize="14sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -72,6 +73,7 @@
             android:layout_width="250dp"
             android:layout_height="35dp"
             android:fontFamily="@font/abeezee"
+            android:textColor="#000000"
             android:textSize="14sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -192,7 +194,9 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="4dp"
         android:ems="10"
+        android:fontFamily="@font/abeezee"
         android:inputType="date"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
@@ -203,7 +207,9 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="4dp"
         android:ems="10"
+        android:fontFamily="@font/abeezee"
         android:inputType="date"
+        android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/editTextDate2"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
