--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="purple">#3F51B5</color>
+    <color name="dark_gray">#8D8D8D</color>
+    <color name="darker_gray">#707070</color>
 </resources>
