--- a/app/src/main/res/layout/item_chat_message.xml
+++ b/app/src/main/res/layout/item_chat_message.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/dark_blue"> <!-- Set background color to blue -->
 
     <TextView
         android:id="@+id/textViewMessage"
@@ -12,4 +13,3 @@
         android:textColor="#000000" />
 
 </LinearLayout>
-
