--- a/app/src/main/res/layout/item_chat_message_user.xml
+++ b/app/src/main/res/layout/item_chat_message_user.xml
@@ -9,7 +9,7 @@
         android:id="@+id/textViewMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="start"
+        android:layout_gravity="end"
         android:background="@drawable/bubble_outgoing"
         android:padding="8dp"
         android:textColor="#FFFFFF" />
