--- a/app/src/main/res/drawable/bubble_outgoing.xml
+++ b/app/src/main/res/drawable/bubble_outgoing.xml
@@ -1,5 +1,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="8dp" />
-    <solid android:color="#2196F3" /> <!-- Blue color for outgoing messages -->
+    <solid android:color="@color/dark_blue" />
+    <stroke
+        android:width="1dp"
+        android:color="#CCCCCC" />
+    <gradient
+        android:startColor="@color/dark_blue"
+        android:endColor="#1976D2"
+        android:angle="270" />
 </shape>
