--- a/app/src/main/res/layout/item_chat_message_bot.xml
+++ b/app/src/main/res/layout/item_chat_message_bot.xml
@@ -9,7 +9,7 @@
         android:id="@+id/textViewMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end"
+        android:layout_gravity="start"
         android:background="@drawable/bubble_incoming"
         android:padding="8dp"
         android:textColor="#000000"
